# agentic_orchestrator

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  config.example.toml  pyproject.toml
_smoke_test/review_bundle/20260412_133249/: config.example.toml  privacy_metadata.json  summary.md  web_service.json
_smoke_test/review_bundle/20260412_133317/: admin_settings.json  git-commit.txt  git-status.txt  pytest.txt  render_ui.json  routing-report.md  scheduled_task.json  summary.md
evals/: debug_eval_v1.json  routing_eval_v1.json  task_eval_v1.json
src/agentic_orchestrator/: __init__.py  adapters.py  cli.py  config.py  contract.py  debug_eval.py  errors.py  health.py  installer.py  orchestrator.py  pilot.py  review_bundle.py  review_reporting.py  routing.py  routing_eval.py  task_eval.py
tests/: test_adapters.py  test_cli.py  test_config.py  test_debug_eval.py  test_health.py  test_installer.py  test_orchestrator.py  test_pilot.py  test_review_bundle.py  test_routing.py  test_routing_eval.py  test_task_eval.py
