[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-orchestrator"
version = "0.1.0"
description = "Thin orchestration prototype over agentic_devdocs, agentic_indexer, and agentic_sitemap."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "OpenAI Codex" }
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
agentic-orchestrator = "agentic_orchestrator.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
